profilelist1exp/unpackaged/objects/Proof_of_Performance_POP__c.object
<CustomObject>
    <description>Viper Project</description>
    <fields>
        <fullName>Available_actions__c</fullName>
        <formula>IF(( MDF_Program__r.RecordTypeId =&quot;012A0000000VhMt&quot; || MDF_Program__r.RecordTypeId =&quot;012A0000000VhMu&quot; || MDF_Program__r.RecordTypeId =&quot;012A0000000VhMz&quot; || MDF_Program__r.RecordTypeId =&quot;012A0000000VhyR&quot;) , 
HYPERLINK(&apos;/apex/SelectPOPTemplate?id=&apos; &amp; Id , 
IMAGE( &quot;resource/1298546011000/GeneratePOPForm&quot;, &apos;GeneratePOPForm&apos;)) , 
&apos;[No Action Available]&apos;)</formula>
        <label>Available actions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <formula>TEXT ( MDF_Program__r.Business_Segment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT ( MDF_Program__r.Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <formula>TEXT ( MDF_Program__r.Fiscal_Quarter__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headcount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Headcount</label>
        <referenceTo>Headcount__c</referenceTo>
        <relationshipLabel>Proof of Performance (POP)</relationshipLabel>
        <relationshipName>Proof_of_Performance_POP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDF_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MDF Program</label>
        <referenceTo>MDF_Program__c</referenceTo>
        <relationshipLabel>Proof of Performance (POP)</relationshipLabel>
        <relationshipName>Proof_of_Performance_POP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POP_ID__c</fullName>
        <displayFormat>POP # {000000}</displayFormat>
        <label>POP  ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>POP_Owner__c</fullName>
        <formula>MDF_Program__r.POP_Owner__r.FirstName &amp; &quot; &quot; &amp; MDF_Program__r.POP_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POP Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POP_Submission_Status__c</fullName>
        <label>POP Submission Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT ( MDF_Program__r.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <formula>TEXT ( MDF_Program__r.Sub_Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Region</label>
        <type>Text</type>
    </fields>
    <label>Proof of Performance (POP)</label>
    <nameField>
        <label>POP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proof of Performance (POP)</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>